--- a/configure.ac
+++ b/configure.ac
@@ -1,7 +1,7 @@
 AC_INIT([spek],[0.8.2])
 AC_CONFIG_SRCDIR([src/spek.cc])
 AC_CONFIG_HEADERS([config.h])
-AM_INIT_AUTOMAKE([1.11.1 foreign no-dist-gzip dist-xz serial-tests])
+AM_INIT_AUTOMAKE([1.11.1 foreign no-dist-gzip dist-xz])
 AM_SILENT_RULES([yes])
 
 AC_LANG([C++])
@@ -82,12 +82,10 @@ AC_CONFIG_FILES([
 	data/icons/32x32/Makefile
 	data/icons/48x48/Makefile
 	data/icons/scalable/Makefile
-	dist/osx/Info.plist
 	dist/win/spek.wxs
 	man/Makefile
 	po/Makefile.in
 	src/Makefile
-	tests/Makefile
 	web/version
 ])
 AC_OUTPUT
