--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Install dependencies
         run: |
-          sudo sed -i 's/jammy/kinetic/g' /etc/apt/sources.list
+          sudo sed -i 's/jammy/lunar/g' /etc/apt/sources.list
           sudo apt update
           sudo apt install -y intltool libwxgtk3.2-dev wx-common libavcodec-dev libavformat-dev
       - name: Compile and bundle application
@@ -107,7 +107,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Install dependencies
         run: |
-          sudo sed -i 's/jammy/kinetic/g' /etc/apt/sources.list
+          sudo sed -i 's/jammy/lunar/g' /etc/apt/sources.list
           sudo apt update
           sudo apt install -y intltool libwxgtk3.2-dev wx-common libavcodec-dev libavformat-dev
       - name: Run tests
