fix: Github Actions failure

--- a/.github/workflows/caching.yml
+++ b/.github/workflows/caching.yml
@@ -7,13 +7,13 @@ on:
 jobs:
   Windows-MSYS2-MINGW64-Caching:
     name: Windows MSYS2/MINGW64 Caching
-    runs-on: windows-2022
+    runs-on: windows-latest
     defaults:
       run:
         shell: msys2 {0}
     steps:
       - name: Check out repository code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Setup MSYS2
         uses: msys2/setup-msys2@v2
         with:
@@ -24,7 +24,7 @@ jobs:
           cd '${{ github.workspace }}' && ./dist/win/install_deps.sh
           du -sh 'C:\msys2'
       - name: Cache MSYS2
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           key: spek-x-msys2-mingw64
           path: C:\msys2
