--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
       - name: Install dependencies
         run: |
           apt update
+          apt full-upgrade -y
           apt install -y g++ make pkg-config libtool intltool libwxgtk3.2-dev wx-common libavcodec-dev libavformat-dev
       - name: Compile and bundle application
         run: |
@@ -108,6 +109,7 @@ jobs:
       - name: Install dependencies
         run: |
           apt update
+          apt full-upgrade -y
           apt install -y g++ make pkg-config libtool intltool libwxgtk3.2-dev wx-common libavcodec-dev libavformat-dev
       - name: Run tests
         run: |
