--- a/configure.ac
+++ b/configure.ac
@@ -46,9 +46,24 @@ AM_COND_IF([USE_VALGRIND], [use_valgrind=yes], [use_valgrind=no])
 
 AC_CHECK_LIB(m, log10)
 
-PKG_CHECK_MODULES(AVFORMAT, [libavformat >= 59.27.100])
-PKG_CHECK_MODULES(AVCODEC, [libavcodec >= 59.37.100])
-PKG_CHECK_MODULES(AVUTIL, [libavutil >= 57.28.100])
+PKG_CHECK_MODULES(AVFORMAT, [libavformat >= 59.27.100], [
+	AC_SUBST([AVFORMAT_CFLAGS])
+	AC_SUBST([AVFORMAT_LIBS])
+])
+PKG_CHECK_MODULES(AVCODEC, [libavcodec >= 59.37.100], [
+	AC_SUBST([AVCODEC_CFLAGS])
+	AC_SUBST([AVCODEC_LIBS])
+])
+PKG_CHECK_MODULES(AVUTIL, [libavutil >= 57.28.100], [
+	AC_SUBST([AVUTIL_CFLAGS])
+	AC_SUBST([AVUTIL_LIBS])
+])
+
+CXXFLAGS="$CXXFLAGS $AVFORMAT_CFLAGS $AVCODEC_CFLAGS $AVUTIL_CFLAGS"
+LDFLAGS="$LDFLAGS $AVFORMAT_LIBS $AVCODEC_LIBS $AVUTIL_LIBS"
+if test "$os" = OSX; then
+	LDFLAGS="$LDFLAGS -framework Cocoa"
+fi
 
 AM_OPTIONS_WXCONFIG
 reqwx=3.0.0
