--- a/configure.ac
+++ b/configure.ac
@@ -6,7 +6,7 @@ AM_SILENT_RULES([yes])
 
 AC_LANG([C++])
 AC_PROG_CXX
-CXXFLAGS="$CXXFLAGS -std=gnu++11 -Wall -Wextra"
+CXXFLAGS="$CXXFLAGS -O2 -std=gnu++11 -Wall -Wextra"
 AC_PROG_CXXCPP
 AC_PROG_LIBTOOL
 AC_PROG_RANLIB
